--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,23 +31,38 @@
     </FrameLayout>
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/homeWarning_Tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="105dp"
+        android:layout_marginTop="55dp"
         android:gravity="center"
         android:text="Seçtiğiniz kategoride\nanket bulunamadı."
-        android:textColor="@color/colorBlue"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:visibility="gone" />
 
-    <com.thomashaertel.widget.MultiSpinner
-        android:id="@+id/homeMultispinner_Sp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="5dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kategori seçiniz: "
+            android:textStyle="bold" />
+
+        <com.thomashaertel.widget.MultiSpinner
+            android:id="@+id/homeMultispinner_Sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 
     <androidx.viewpager.widget.ViewPager
@@ -55,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="105dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp" />
 
