--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -84,7 +84,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:padding="10dp"
-                android:text="@string/surveySecret" />
+                android:text="@string/surveySecret"
+                android:theme="@style/ColorSwitchStyle"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
