--- a/app/src/main/res/layout/fragment_user_profile_bence.xml
+++ b/app/src/main/res/layout/fragment_user_profile_bence.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="55dp"
         android:gravity="center"
         android:text="Kullanıcı hesabı gizli ve siz\nonu takip etmiyorsunuz."
-        android:textColor="@color/colorBlue"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         android:textStyle="italic" />
 
