--- a/app/src/main/res/layout/list_view_item_user_survey.xml
+++ b/app/src/main/res/layout/list_view_item_user_survey.xml
@@ -13,6 +13,7 @@
         app:cardElevation="2dp">
 
         <LinearLayout
+            android:id="@+id/usersurveyDelete_Ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -139,14 +140,14 @@
                         android:orientation="horizontal">
 
                         <TextView
-                        android:id="@+id/usersurveyUsers_Tv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
-                        android:layout_weight="@integer/google_play_services_version"
-                        android:text=""
-                        android:textColor="@android:color/black"
-                        android:textStyle="italic" />
+                            android:id="@+id/usersurveyUsers_Tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight="@integer/google_play_services_version"
+                            android:text=""
+                            android:textColor="@android:color/black"
+                            android:textStyle="italic" />
 
                         <TextView
                             android:id="@+id/usersurveyTime_Tv"
