--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/editName"
+            android:hint="@string/editFullname"
             android:inputType="textPersonName" />
 
         <Switch
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_background"
-            android:text="@string/editButton"
+            android:text="@string/editSave"
             android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
